Updated build.gradle.kts